--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<a href="abcd.com">Home</a>
+		<a href="abcd.com">About us</a>
+		<a href="abcd.com">Contact us</a>
+	</nav>
+	<h2>3 random videos</h2>
+	<ul>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+			</video>
+		</li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+			</video>
+		</li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+			</video>
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
