--- a/main.html
+++ b/main.html
@@ -9,9 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<a href="abcd.com">Home</a>
-		<a href="abcd.com">About us</a>
-		<a href="abcd.com">Contact us</a>
+		<ul>
+			<li><a href="abcd.com">Home</a></li>
+			<li><a href="abcd.com">About us</a></li>
+			<li><a href="abcd.com">Contact us</a></li>
+		</ul>
 	</nav>
 	<h2>3 random videos</h2>
 	<ul>
